manifests/deployment-3.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "musicapp-c41b"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "musicapp-c41b"
    spec:
      containers:
        - name: "musicapp-c41b"
          image: "production2020.azurecr.io/musicapp"
          ports:
          - containerPort: 3001
