manifests/deployment-5.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "musicapp-2c0e"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "musicapp-2c0e"
    spec:
      containers:
        - name: "musicapp-2c0e"
          image: "production2020.azurecr.io/musicapp"
          ports:
          - containerPort: 3001
