manifests/service-1.yml
apiVersion: v1
kind: Service
metadata:
    name: "music2020-e957"
    labels:
        app: "music2020-e957"
spec:
    type: ClusterIP
    ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: http
    selector:
        app: "music2020-e957"
