manifests/service-4.yml
apiVersion: v1
kind: Service
metadata:
    name: "musicapp-dfe1"
    labels:
        app: "musicapp-dfe1"
spec:
    type: LoadBalancer
    ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: http
    selector:
        app: "musicapp-dfe1"
